force-app/main/default/objects/Offer__c/fields/Offer_Number__c.field-meta.xml
<CustomField>
    <fullName>Offer_Number__c</fullName>
    <displayFormat>OFR-{0000}</displayFormat>
    <label>Offer Number</label>
    <type>AutoNumber</type>
</CustomField>