force-app/main/default/objects/Offer__c/validationRules/Down_Payment_Cannot_Exceed_Offer.validationRule-meta.xml
<ValidationRule>
    <fullName>Down_Payment_Cannot_Exceed_Offer</fullName>
    <active>true</active>
    <errorConditionFormula>Down_Payment__c &gt; Offer_Amount__c</errorConditionFormula>
    <errorDisplayField>Down_Payment__c</errorDisplayField>
    <errorMessage>Down payment cannot exceed the offer amount</errorMessage>
</ValidationRule>