force-app/main/default/objects/Offer__c/validationRules/Expiration_Date_Cannot_Be_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiration_Date_Cannot_Be_Past</fullName>
    <active>true</active>
    <errorConditionFormula>Expiration_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Expiration_Date__c</errorDisplayField>
    <errorMessage>Expiration date cannot be in the past</errorMessage>
</ValidationRule>