force-app/main/default/objects/Offer__c/validationRules/Offer_amount_must_be_greater_than_zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Offer_amount_must_be_greater_than_zero</fullName>
    <active>true</active>
    <errorConditionFormula>Offer_Amount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Offer_Amount__c</errorDisplayField>
    <errorMessage>Offer amount must be greater than zero</errorMessage>
</ValidationRule>