force-app/main/default/objects/Offer__c/listViews/Accepted_Offers.listView-meta.xml
<ListView>
    <fullName>Accepted_Offers</fullName>
    <columns>Offer_Number__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Property__c</columns>
    <columns>Offer_Amount__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>Accepted Offers</label>
</ListView>